force-app/main/default/objects/fferpcore__SequenceRequest__e/fferpcore__SequenceRequest__e.object-meta.xml
<CustomObject>
    <label>Sequence Request</label>
    <pluralLabel>Sequence Requests</pluralLabel>
</CustomObject>