force-app/main/default/objects/fferpcore__SequenceRequest__e/fields/fferpcore__IsOverflow__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__IsOverflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Diagnostic indication that this event originated from the overflow code in the event processor.</description>
    <label>Is Overflow</label>
    <type>Checkbox</type>
</CustomField>